# TRExS_F2F_Meeting_Oct_2025

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md  data_examples.ipynb
data/dryrun_01/catalogs/: TRExS_dryrun_01_MASTER_input_catalog_v1.1_cutout.csv  TRExS_dryrun_01_catalog_planet_sample_injected_parameters_v1.2_cutout.csv
data/dryrun_01/lcs_extracted/: roman_wfi_04579395_F146_dryrun01_lc.fits
data/dryrun_01/lcs_pivot/: .gitignore  TRExS_232842_F146_simlc.fits
data/dryrun_01/prf_models/: roman_WFI_rampfitted_F087_3_SCA02_shape_model_cad0_center_v2.fits  roman_WFI_rampfitted_F146_3_SCA02_shape_model_cad0_center_v2.fits  roman_WFI_rampfitted_F213_3_SCA02_shape_model_cad0_center_v2.fits
lc_extraction/: image_cutout.ipynb
notebooks/: image_cutout.ipynb
transit_search/: search_model_fluxvetting.ipynb
